[workspace]

members = [
  "xps-gateway",
  "messaging",
  "inbox",
  "registry", 
  "gateway-types", "lib-xps", "xps",
]

exclude = [ ]

# Make the feature resolver explicit.
# See https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html#details
resolver = "2"

[workspace.dependencies]
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
async-trait = "0.1"
jsonrpsee = { version = "0.22", features = ["macros", "server", "client-core"] }
anyhow = "1.0"
thiserror = "1.0"
ethers = { version = "2.0.11", features = ["abigen"] }
ctor = "0.2"
lib-didethresolver = { git = "https://github.com/xmtp/didethresolver", branch = "main" }
gateway-types = { path = "./gateway-types" }
rustc-hex = "2.1"
hex = "0.4"
