[package]
name = "gateway-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
lib-didethresolver.workspace = true
ethers.workspace = true
thiserror.workspace = true
jsonrpsee.workspace = true
