[package]
name = "lib-xps"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
tokio.workspace = true
async-trait.workspace = true
jsonrpsee.workspace = true
anyhow.workspace = true
thiserror.workspace = true
ethers = { workspace = true, features = ["ws"] }
ctor.workspace = true
lib-didethresolver.workspace = true
xps-types.workspace = true
hex.workspace = true
rand = "0.8.5"
tokio-stream = { version = "0.1", features = ["net"] }
registry = { path = "../registry" }

[dev-dependencies]
jsonrpsee = { workspace = true, features = ["macros", "server", "client"]}
tokio = { workspace = true, features = ["macros", "rt", "time"]}
futures = "0.3"
serde_json.workspace = true

