[package]
name = "registry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonrpsee = { version = "0.21", features = ["macros", "server", "client-core"] }
anyhow = "1"
ethers = "2"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.34", features = ["macros", "rt", "time"] }

