[package]
name = "xps_gateway"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }
serde = "1"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1", features = ["net"] }
async-trait = "0.1"
jsonrpsee = { version = "0.21", features = ["macros", "server", "client-core"] }
anyhow = "1"
thiserror = "1"
ctor = "0.2"

[dev-dependencies]
jsonrpsee = { version = "0.21", features = ["macros", "server", "client"] }
futures = "0.3"
tokio = { version = "1.34", features = ["macros", "rt", "time"] }
