[package]
name = "xps"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
tokio.workspace = true
ethers = { workspace = true, features = ["ws"] }
tracing.workspace = true
tracing-subscriber.workspace = true
lib-xps = { path = "../lib-xps" }
clap = { version = "4.4.18", features = ["derive"] }
